tests/neg/simple/21-conditional-expression.ts

/*@  bar :: (f: () => posint) => { number | v < 0 } */
export function bar(f) {
  return (typeof f === "function") ? f : f();
}
